[package]
name = "rhwd"
description = "Work In Progress - Currently Unusable"
version = "0.0.1"
authors = ["Andy Bell <andy.bell.github@gmail.com>"]
edition = "2018"
license = "Parity-6.0.0 AND Apache-2.0"
repository = "https://github.com/andy-bell/rhwd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "1.4.2"
hyper = "0.12.35"
r2d2 = "0.8.5"
serde_json = "1.0.40"
